# Resetful-Ocean-Optics-USB2000-Spectrometer

./: .gitignore  README.md
RestfullPlotlyView/: README.md  package-lock.json  package.json  pnpm-lock.yaml
RestfullPlotlyView/.idea.bak/: modules.xml
RestfullPlotlyView/.run/: debug.run.xml  run.run.xml
RestfullPlotlyView/src/: App.vue  main.js
RestfullPlotlyView/src/components/: VueIp.vue
RestfullPlotlyView/src/router/: index.js
RestfullPlotlyView/src/store/: index.js
RestfullPlotlyView/src/views/: HomeView.vue
RestfullPlotlyView/src/views/Plotly/: BarChart.vue  BoxPlot.vue  BubbleChart.vue  ContinuousErrorBar.vue  PieChart.vue  RibbonPlots.vue  ScatterChart.vue  SurfacePlots.vue
RestfullSpectrum/: CMakeCache.txt  CMakeLists.txt  Makefile  RestfullSpectrum  cmake_install.cmake  main.c
RestfullSpectrum/src/: OceanOptics.c  handler.h  pg.h  response_builder.h  utils.c  utils.h
RestfullSpectrum/src/usb2000/: dump.c  dump.h  seabreeze-util.c  seabreeze-util.h  usb2000.c  usb2000.h  util.h
RestfullSpectrum/src/usb2000/c/: demo-averaging.c  demo-named-spectrometer.c  demo-qepro-api.c  demo-raw-usb-seabreezeapi.c  demo-raw-usb.c  demo-stability-scan.c  demo-streaming-xml.c  demo-strobe-sts.c  demo-strobe.c  demo-sts-api.c  demo-sts-eeprom.c  demo-timeout.c  demo-timing.c  demo-unformatted-spectrum.c  seabreeze-util.c  util.c
